# auther

./: auther.cabal  default.nix  flake.nix  hash.hi  hash.hs
src/: Auther.hs  Base32Decode.hs  hash.hs
src/Auther/: .Internal.hs.swp  Arguments.hs  Internal.hs
src/Base32Decode/: Internal.hs
test/: AutherSpec.hs
