name:                auther
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Lagos
maintainer:          dlagos@formbay.com.au
build-type:          Simple
cabal-version:       >=1.10
executable auther
  main-is:           Auther.hs
  other-modules:     Auther.Internal
  
  build-depends:       base
                     , bytestring
                     , base32-bytestring
                     , cryptonite
                     , binary
                     , memory
                     , clock
                     , array
                     , vector
                     , unix
                     , word8
                     , bytestring-conversion
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010

test-suite hspec
  build-depends:       hspec
                     , base
                     , bytestring
                     , base32-bytestring
                     , word8
                     , auther
                     , binary
                     , bytestring-conversion
                     , clock
  default-language:  Haskell2010
  hs-source-dirs:    test
  main-is:           AutherSpec.hs
  type:              exitcode-stdio-1.0

library
  hs-source-dirs:      src
  exposed-modules:     Auther.Internal
  build-depends:       base
                     , bytestring
                     , base32-bytestring
                     , word8
                     , cryptonite
                     , binary
                     , memory
                     , clock
                     , array
                     , vector
                     , unix
                     , bytestring-conversion
  default-language:    Haskell2010
